<resources>
    <string name="app_name">BaseDeDatos</string>

    <string name="codigo_del_producto">Codigo del producto</string>
    <string name="descripcion">Descripcion</string>
    <string name="buscar">Buscar</string>
    <string name="modificar">Modificar</string>
    <string name="registrar">Registrar</string>
    <string name="eliminar">Eliminar</string>
    <string name="_00_00">00.00</string>

</resources>